refactoring
changes in node propertyList